# PlexIPTV

./: .dockerignore  .gitignore  Dockerfile  config.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
plexiptv/: .dockerignore  Dockerfile  __init__.py  __main__.py  app.py  build-on-truenas.sh  config.py  deploy.sh  docker-compose.yml  paste-allinone.txt  paste-commands.txt  paste-part1.txt  paste-part2.txt  requirements.txt  utils.py
plexiptv/cache/: store.py
plexiptv/dashboard/: router.py
plexiptv/dashboard/static/: app.js  style.css
plexiptv/hdhr/: router.py  ssdp.py
plexiptv/plexiptv/: config.py  models.py
plexiptv/plexiptv-stack/: Dockerfile  docker-compose.yml
plexiptv/plexiptv-stack/plexiptv/: config.py
plexiptv/plexiptv-stack/plexiptv/dashboard/static/: index.html
plexiptv/plexiptv-stack/plexiptv/proxy/: stream.py
plexiptv/plexiptv/dashboard/: router.py
plexiptv/proxy/: stream.py
plexiptv/xtream/: client.py
